self-host/fluxcd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-next
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: capacitor-next.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor-next
                port:
                  number: 80
